@@ -5,6 +5,7 @@
 * Reference core font in PDF only once
 * Add more language codes for Tesseract and Cuneiform
 * + Tesseract 3.02 support
+* Fixed Perl exiting when restoring a crashed session
 
 
 1.0.1 (05.02.2012):
